# DFIR_Case_Manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
app/routers/: __init__.py  api_artifacts.py  api_cases.py  api_iocs.py  api_reports.py  web.py
app/services/: __init__.py  artifact_service.py  case_service.py  demo_service.py  ioc_service.py  note_service.py  report_service.py  timeline_service.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: base.html  case_detail.html  cases.html  dashboard.html  report.html
app/templates/partials/: _empty_state.html
app/utils/: formatters.py  validators.py
docs/examples/: sample_case_payload.json
tests/: conftest.py  test_artifacts_api.py  test_cases_api.py  test_iocs_api.py  test_models.py  test_report_generation.py  test_timeline.py
